--- a/docker.env
+++ b/docker.env
@@ -1,3 +1,5 @@
 POSTGRES_PASSWORD=postgres
 POSTGRES_USER=postgres
-POSTGRES_DB=swiftmr
+POSTGRES_DB=gxample
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
