--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
-verison: '3.6'
+version: "3.6"
 
 services:
   postgres:
     image: postgres:latest
     volumes:
-      - db_data:/var/lib/postgres/data
+      - "db-data:/var/lib/postgres/data"
     ports:
-      - 5432:5432
+      - 20000:5432
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: "cookerserver"
+      POSTGRES_USER: "admin"
+      POSTGRES_PASSWORD: "meatballa1234"
 
   cookerserver:
     build:
@@ -19,7 +19,12 @@ services:
       - postgres
     restart: on-failure
     ports:
-      - ${COOKERSERVER_PORT}:3000
-    environment:
-      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres/${POSTGRES_DB}
+      - 3000:3000
+    volumes:
+      - ./config.prod.yml:/usr/app/config.yml
+      - web-data:/usr/app/static
+
+volumes:
+  db-data:
+  web-data:
 
