--- a/prod.env
+++ b/prod.env
@@ -2,8 +2,8 @@
 POSTGRES_HOST="localhost"
 POSTGRES_PORT=5432
 POSTGRES_DB="cooker"
-POSTGRES_USER="admin"
-POSTGRES_PASSWORD="meatball1234"
+POSTGRES_USER="cooker"
+POSTGRES_PASSWORD="admin1234"
 
 # cooker server settings
 COOKER_DATABASE_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?sslmode=disable"
