feat: chek fetch from igntserver

--- a/prod.env
+++ b/prod.env
@@ -16,4 +16,5 @@ COOKER_EUREKA_INSTANCE_HOSTNAME=cooker
 COOKER_EUREKA_INSTANCE_IPADDRESS=cooker
 COOKER_EUREKA_INSTANCE_PORT=3000
 COOKER_EUREKA_TTL=30
+COOKER_IGSERVER_URI="http://ctk0327.iptime.org:25000/ingredientservice/ingredients"
 COOKER_STATIC_PATH=static
