--- a/dev.env
+++ b/dev.env
@@ -16,4 +16,5 @@ COOKER_EUREKA_INSTANCE_HOSTNAME="0.0.0.0"
 COOKER_EUREKA_INSTANCE_IPADDRESS="0.0.0.0"
 COOKER_EUREKA_INSTANCE_PORT=3000
 COOKER_EUREKA_TTL=30
+COOKER_IGSERVER_URI="http://ctk0327.iptime.org:25000/ingredientservice/ingredients"
 COOKER_STATIC_PATH="static"
